# MViT_V2

./: .gitignore  README.md  pyproject.toml
src/: get_data.py  main.py
src/mvit/: __init__.py  datamodule.py  mvit.py
